...
        android:layout_below="@id/name"
        android:layout_marginTop="@dimen/tenMarginTop"
        android:textSize="@dimen/twentyLetter"
        android:layout_toEndOf="@id/occupation"/>

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:layout_marginTop="@dimen/tenMarginTop"
        android:onClick="onBackClick"
        android:layout_alignParentBottom="true"
...
